# arrivals-board

./: .gitignore  fly.toml
api/: .dockerignore  Dockerfile  __init__.py  app.py  pyproject.toml  stations.py
api/services/: __init__.py  aqi.py  mta.py  weather.py
firmware/: code.py  settings.toml  settings_template.toml
