[project]
name = "mta-arrivals-api"
version = "2.0.0"
description = "Real-time NYC subway arrivals, weather, and AQI for LED matrix displays"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "gtfs-realtime-bindings>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
